--- a/sections/state_of_the_art.tex
+++ b/sections/state_of_the_art.tex
@@ -243,18 +243,6 @@ The pursuit of fairness within AI systems represents a dynamic and indispensable
 
 The pursuit of fairness in AI is an all-encompassing endeavor, entailing an array of considerations that orbit around the ambition to eliminate bias predicated on attributes such as race, gender, age, ethnicity, and socio-economic status. Bias in AI manifests in multifarious ways, originating from the training data's inherent biases or the algorithms themselves. Fair AI systems, therefore, endeavor to minimize these biases, upholding the principles of impartiality and justice in the outcomes they produce. 
 
-In the quest for fairness, various fairness metrics and criteria have emerged, serving as quantifiable benchmarks for assessing the equity of AI systems. These include disparate impact, equal opportunity, and demographic parity. 
-
-\begin{itemize}
-
-    \item Disparate impact assesses the differential impact an AI system has on distinct demographic groups
-
-    \item Equal opportunity guarantees that the probability of a positive outcome remains consistent across all demographic segments
-
-    \item Demographic parity, on the other hand, centers on the proportional representation of various groups within AI-generated outcomes
-
-\end{itemize}
-
 Addressing fairness within AI systems necessitates the employment of an assortment of techniques. This involves pre-processing data to ameliorate biases, the modification of algorithms to instill them with fairness-awareness, and post-processing methods to ensure that outcomes are equitable. Furthermore, transparency and explainability are pivotal features of AI models, facilitating a deeper understanding of potential biases and nurturing trust in the technology. 
 
 Emphasizing the ethical dimension, the pursuit of fairness in AI systems transcends the confines of technical solutions. It necessitates the active involvement of stakeholders, the incorporation of diverse perspectives, and a steadfast commitment to adhering to guidelines and regulations that prioritize fairness and impartiality. 
@@ -298,6 +286,44 @@ The successful implementation of post-processing techniques hinges on a profound
 Ongoing evaluation represents an indispensable element of the post-processing phase. Continual assessments and audits are essential to ensure that AI models adhere to ethical standards and actively promote fairness. This continuous vigilance and adjustment are pivotal in fostering AI technologies that contribute to the construction of a more equitable and just society. 
 
 In essence, post-processing represents the culmination of efforts to instill fairness within AI models, serving as the final safeguard against bias and discrimination in the model's predictions.
+
+\begin{figure}[H]
+    \centering
+    \begin{tikzpicture}[node distance=2cm]
+        \node (start) [startstop] {Fairness techniques};
+        \node (preproc) [startstop, left of=start, xshift=-2cm] {Pre-processing};
+        \node (inproc) [startstop, below of=start] {In-processing};
+        \node (postproc) [startstop, right of=start, xshift=2cm] {PostProcessing};
+        \node (ou) [startstop, below of=preproc] {Oversampling/Undersampling};
+        \node (nr) [startstop, below of=ou] {Noise removal};
+        \node (da) [startstop, below of=nr] {Data augmentation};
+        \node (sr) [startstop, below of=da] {Sensitive attribute neutralization};
+        \node (re) [startstop, below of=inproc] {Regularization};
+        \node (rew) [startstop, below of=re] {Reweighting};
+        \node (pr) [startstop, below of=rew] {Prejudice Remover};
+        \node (dp) [startstop, below of=pr] {Demographic Parity Loss};
+        \node (fa) [startstop, below of=dp] {Fair Adversarial Training};
+        \node (ta) [startstop, below of=postproc] {Threshold Adjustments};
+        \node (ac) [startstop, below of=ta] {Additive Counterfactuals};
+        \node (eo) [startstop, below of=eo] {Equalized Odds Post-processing};
+        \draw [arrow] (start) -- (preproc);
+        \draw [arrow] (start) -- (inproc);
+        \draw [arrow] (start) -- (postproc);
+        \draw [arrow] (preproc) -- (ou);
+        \draw [arrow] (ou) -- (nr);
+        \draw [arrow] (nr) -- (da);
+        \draw [arrow] (da) -- (sr);
+        \draw [arrow] (inproc) -- (re);
+        \draw [arrow] (re) -- (rew);
+        \draw [arrow] (rew) -- (pr);
+        \draw [arrow] (pr) -- (dp);
+        \draw [arrow] (dp) -- (fa);
+        \draw [arrow] (postproc) -- (ta);
+        \draw [arrow] (ta) -- (ac);
+        \draw [arrow] (ac) -- (eo);
+    \end{tikzpicture}
+    \caption{Algorithmic bias addressing}
+\end{figure}
 
 \subsection{Pre-processing Techniques for Addressing Fairness in AI}
 
