--- a/sections/state_of_the_art.tex
+++ b/sections/state_of_the_art.tex
@@ -322,7 +322,7 @@ In essence, post-processing represents the culmination of efforts to instill fai
         \draw [arrow] (ta) -- (ac);
         \draw [arrow] (ac) -- (eo);
     \end{tikzpicture}
-    \caption{Algorithmic bias addressing}
+    \caption{Fairness addressing techniques}
 \end{figure}
 
 \subsection{Pre-processing Techniques for Addressing Fairness in AI}
