--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -90,7 +90,7 @@ fill=green!30]
 
 \input{./sections/contribution.tex}
 
-\input{./sections/validation.tex}
+\input{./sections/validation_ull.tex}
 
 \input{./sections/conclusion.tex}
 
