--- a/sections/validation_ull.tex
+++ b/sections/validation_ull.tex
@@ -182,7 +182,7 @@ It's important, before to provide a general view of the results, provide some co
 
 In order to provide a tabular representation of the results it's necessary to assign some labels to have a more compressed representation and two tables are reported, one for each metric:
 
-begin{itemize}
+\begin{itemize}
     \item \emph{Fairness algorithm}: FairAlg
     \begin{itemize}
         \item \emph{Data augmentation}: DA
