--- a/sections/validation_ull.tex
+++ b/sections/validation_ull.tex
@@ -226,7 +226,7 @@ In order to provide a tabular representation of the results it's necessary to as
     \end{itemize}
 \end{itemize}
 
-\paragraph{Fairness metric: Disparate Impact}
+\textbf{Fairness metric: Disparate Impact}
 
 \begin{figure}[H]
     \centering
@@ -250,7 +250,7 @@ In order to provide a tabular representation of the results it's necessary to as
     \label{fig:results}
 \end{figure}
 
-\paragraph{Fairness metric: Demographic Parity}
+\textbf{Fairness metric: Demographic Parity}
 
 \begin{figure}[H]
     \centering
