--- a/sections/validation_ull.tex
+++ b/sections/validation_ull.tex
@@ -225,7 +225,7 @@ In order to provide a tabular representation of the results it's necessary to as
         \end{itemize}
     \end{itemize}
 \end{itemize}
-
+\newpage
 \textbf{Fairness metric: Disparate Impact}
 
 \begin{figure}[H]
@@ -234,10 +234,10 @@ In order to provide a tabular representation of the results it's necessary to as
         \hline
         \textbf{FairAlg} & \textbf{Model} & \textbf{Acc} & \textbf{DIs} & \textbf{DIc} & \textbf{DIp} & \textbf{DIh} & \textbf{DIe} \\
         \hline
-        DA & XGB & &  &  & & & \\
-        DA & RF & &  &  & & & \\
-        FtU & XGB & &  &  & & & \\
-        FtU & RF & &  &  & & & \\
+        DA & XGB & 0.9975 & 0.9670 & 0.9813 & 0.9901 & 0.9340 & 0.0007 \\
+        DA & RF & 0.9987 & 0.9670 & 0.9770 & 0.9901 & 0.8610 & 0.0013 \\
+        FtU & XGB & 0.9987 &  &  & & & \\
+        FtU & RF & 0.9987 &  &  & & & \\
         EG & XGB & &  &  & & & \\
         EG & RF & &  &  & & & \\
         GS & XGB & &  &  & & & \\
@@ -249,7 +249,7 @@ In order to provide a tabular representation of the results it's necessary to as
     \caption{Models training results for disparate impact metric}
     \label{fig:results}
 \end{figure}
-
+\newpage
 \textbf{Fairness metric: Demographic Parity}
 
 \begin{figure}[H]
@@ -258,10 +258,10 @@ In order to provide a tabular representation of the results it's necessary to as
         \hline
         \textbf{FairAlg} & \textbf{Model} & \textbf{Acc} & \textbf{DPDs} & \textbf{DPDc} & \textbf{DPDp} & \textbf{DPDh} & \textbf{DPDe} \\
         \hline
-        DA & XGB & &  &  & & & \\
-        DA & RF & &  &  & & & \\
-        FtU & XGB & &  &  & & & \\
-        FtU & RF & &  &  & & & \\
+        DA & XGB & 0.9975 & 0.0074 & 0.0026 & 0.0014 & 0.0011 & 0.0007\\
+        DA & RF & 0.9987 & 0.0068 & 0.0032 & 0.0014 & 0.0023 & 0.0013\\
+        FtU & XGB & 0.9987 &  &  & & & \\
+        FtU & RF & 0.9987 &  &  & & & \\
         EG & XGB & &  &  & & & \\
         EG & RF & &  &  & & & \\
         GS & XGB & &  &  & & & \\
