--- a/sections/validation_ull.tex
+++ b/sections/validation_ull.tex
@@ -235,14 +235,23 @@ In order to provide a tabular representation of the results it's necessary to as
         \textbf{FairAlg} & \textbf{Model} & \textbf{Acc} & \textbf{DIs} & \textbf{DIc} & \textbf{DIp} & \textbf{DIh} & \textbf{DIe} \\
         \hline
         DA & XGB & 0.9975 & 0.9670 & 0.9813 & 0.9901 & 0.9340 & 0.0007 \\
+        \hline
         DA & RF & 0.9987 & 0.9670 & 0.9770 & 0.9901 & 0.8610 & 0.0013 \\
+        \hline
         FtU & XGB & 0.9987 &  &  & & & \\
+        \hline
         FtU & RF & 0.9987 &  &  & & & \\
+        \hline
         EG & XGB & &  &  & & & \\
+        \hline
         EG & RF & &  &  & & & \\
+        \hline
         GS & XGB & &  &  & & & \\
+        \hline
         GS & RF & &  &  & & &\\
+        \hline
         TO & XGB & &  &  & & & \\
+        \hline
         TO & RF & &  &  & & & \\
         \hline
     \end{tabular}
@@ -259,14 +268,23 @@ In order to provide a tabular representation of the results it's necessary to as
         \textbf{FairAlg} & \textbf{Model} & \textbf{Acc} & \textbf{DPDs} & \textbf{DPDc} & \textbf{DPDp} & \textbf{DPDh} & \textbf{DPDe} \\
         \hline
         DA & XGB & 0.9975 & 0.0074 & 0.0026 & 0.0014 & 0.0011 & 0.0007\\
+        \hline
         DA & RF & 0.9987 & 0.0068 & 0.0032 & 0.0014 & 0.0023 & 0.0013\\
+        \hline
         FtU & XGB & 0.9987 &  &  & & & \\
+        \hline
         FtU & RF & 0.9987 &  &  & & & \\
+        \hline
         EG & XGB & &  &  & & & \\
+        \hline
         EG & RF & &  &  & & & \\
+        \hline
         GS & XGB & &  &  & & & \\
+        \hline
         GS & RF & &  &  & & &\\
+        \hline
         TO & XGB & &  &  & & & \\
+        \hline
         TO & RF & &  &  & & & \\
         \hline
     \end{tabular}
