--- a/sections/validation_ull.tex
+++ b/sections/validation_ull.tex
@@ -238,21 +238,17 @@ In order to provide a tabular representation of the results it's necessary to as
         \hline
         DA & RF & 0.9987 & 0.9670 & 0.9770 & 0.9901 & 0.8610 & 0.0013 \\
         \hline
-        FtU & XGB & 0.9987 &  &  & & & \\
+        FtU & XGB & 0.9987 & 0.9750 & 0.9813 & 0.9942 & 0.8610 & 0.0019 \\
         \hline
-        FtU & RF & 0.9987 &  &  & & & \\
+        FtU & RF & 0.9987 & 0.9697 & 0.9770 & 0.9901 & 0.8610 & 0.0013 \\
         \hline
-        EG & XGB & &  &  & & & \\
+        EG & XGB & 0.9944 & 0.9779 & 0.9743 & 0.9919 & 0.8622 & 0.0019 \\
         \hline
-        EG & RF & &  &  & & & \\
+        EG & RF & 0.9987 & 0.9697 & 0.9770 & 0.9901 & 0.8610 & 0.0013 \\
         \hline
-        GS & XGB & &  &  & & & \\
+        GS & XGB & 0.5201 & 0.0000 & 0.0000 & 0.0000 & 0.0000 & 0.0759 \\
         \hline
-        GS & RF & &  &  & & &\\
-        \hline
-        TO & XGB & &  &  & & & \\
-        \hline
-        TO & RF & &  &  & & & \\
+        GS & RF & 0.9987 & 0.9697 & 0.9770 & 0.9901 & 0.8610 & 0.0013 \\
         \hline
     \end{tabular}
     \caption{Models training results for disparate impact metric}
@@ -271,21 +267,17 @@ In order to provide a tabular representation of the results it's necessary to as
         \hline
         DA & RF & 0.9987 & 0.0068 & 0.0032 & 0.0014 & 0.0023 & 0.0013\\
         \hline
-        FtU & XGB & 0.9987 &  &  & & & \\
+        FtU & XGB & 0.9987 & 0.0056 & 0.0026 & 0.0008 & 0.0023 & 0.0019 \\
         \hline
-        FtU & RF & 0.9987 &  &  & & & \\
+        FtU & RF & 0.9987 & 0.0068 & 0.0032 & 0.0014 & 0.0023 & 0.0013 \\
         \hline
-        EG & XGB & &  &  & & & \\
+        EG & XGB & 0.9944 & 0.0049 & 0.0036 & 0.0012 & 0.0023 & 0.0019 \\
         \hline
-        EG & RF & &  &  & & & \\
+        EG & RF & 0.9987 & 0.0068 & 0.0032 & 0.0014 & 0.0023 & 0.0013 \\
         \hline
-        GS & XGB & &  &  & & & \\
+        GS & XGB & 0.5201 & 0.1204 & 0.0504 & 0.0556 & 0.0049 & 0.0759 \\
         \hline
-        GS & RF & &  &  & & &\\
-        \hline
-        TO & XGB & &  &  & & & \\
-        \hline
-        TO & RF & &  &  & & & \\
+        GS & RF & 0.9987 & 0.0068 & 0.0032 & 0.0014 & 0.0023 & 0.0013 \\
         \hline
     \end{tabular}
     \caption{Models training results for demographic parity difference metric}
