--- a/sections/validation_ull.tex
+++ b/sections/validation_ull.tex
@@ -255,6 +255,19 @@ In order to provide a tabular representation of the results it's necessary to as
     \label{fig:results}
 \end{figure}
 
+About these results it's possible to make some consideration:
+
+\begin{enumerate}
+
+    \item For each model the metric for \emph{ESCS} is close to 0. This means that each algorithm the demographic parity is not achieved.
+
+    \item On the other hand for every other protected attribute is close to 1, this means that for each algorithm, except the GridSearch, for these protected attributes, the demographic parity is achieved.
+
+    \item The GridSearch algorithm with the XGB model completely fails into the achieving of the demographic parity, since the DI value is 0 for each protected attribute but \emph{ESCS}, for which it's close to 0.
+    
+\end{enumerate}
+
+\newpage
 \textbf{Fairness metric: Demographic Parity}
 
 \begin{figure}[H]
@@ -287,30 +300,14 @@ In order to provide a tabular representation of the results it's necessary to as
 About these results it's possible to make some consideration:
 
 \begin{enumerate}
-
-    \item \emph{Disparate Impact metric:}
-    \begin{itemize}
-        
-        \item For each model the metric for \emph{ESCS} is close to 0. This means that each algorithm the demographic parity is not achieved.
-
-        \item On the other hand for every other protected attribute is close to 1, this means that for each algorithm, except the GridSearch, for these protected attributes, the demographic parity is achieved.
-
-        \item The GridSearch algorithm with the XGB model completely fails into the achieving of the demographic parity, since the DI value is 0 for each protected attribute but \emph{ESCS}, for which it's close to 0.
-    
-    \end{itemize}
-
-    \item \emph{Demographic Parity Difference:}
-    \begin{itemize}
-
         \item Every algorithm achieve a reasonable degree of group fairness.
 
         \item The GridSearch algorithm with the XGB model is the combination of algorithm and model that fails into the achieving of trade-off between fairness and accuracy.
 
-    \end{itemize}
-
 \end{enumerate}
 
-or each fairness algorithm employed in the Fair-by-Design workflow, the minimum and maximum accuracy values are presented. This analysis provides insights into the range of accuracy outcomes associated with each fairness algorithm.
+\newpage
+For each fairness algorithm employed in the Fair-by-Design workflow, the minimum and maximum accuracy values are presented. This analysis provides insights into the range of accuracy outcomes associated with each fairness algorithm.
 In order to report a more compact visualization of the results to each algorithm is assigned a numerical identifier. Since the Threshold Optimizer algorithm always returns the same results these are not encoded in the graphics to show the differences.
 
 \begin{figure}[H]
