--- a/sections/validation_ull.tex
+++ b/sections/validation_ull.tex
@@ -257,7 +257,7 @@ In order to provide a tabular representation of the results it's necessary to as
 
 About these results it's possible to make some consideration:
 
-\begin{enumerate}
+\begin{itemize}
 
     \item For each model the metric for \emph{ESCS} is close to 0. This means that each algorithm the demographic parity is not achieved.
 
@@ -265,7 +265,7 @@ About these results it's possible to make some consideration:
 
     \item The GridSearch algorithm with the XGB model completely fails into the achieving of the demographic parity, since the DI value is 0 for each protected attribute but \emph{ESCS}, for which it's close to 0.
     
-\end{enumerate}
+\end{itemize}
 
 \newpage
 \textbf{Fairness metric: Demographic Parity}
@@ -299,87 +299,73 @@ About these results it's possible to make some consideration:
 
 About these results it's possible to make some consideration:
 
-\begin{enumerate}
+\begin{itemize}
         \item Every algorithm achieve a reasonable degree of group fairness.
 
         \item The GridSearch algorithm with the XGB model is the combination of algorithm and model that fails into the achieving of trade-off between fairness and accuracy.
 
-\end{enumerate}
+\end{itemize}
 
 \newpage
 For each fairness algorithm employed in the Fair-by-Design workflow, the minimum and maximum accuracy values are presented. This analysis provides insights into the range of accuracy outcomes associated with each fairness algorithm.
-In order to report a more compact visualization of the results to each algorithm is assigned a numerical identifier. Since the Threshold Optimizer algorithm always returns the same results these are not encoded in the graphics to show the differences.
 
 \begin{figure}[H]
     \centering
-    \begin{tabular}{|c|c|}
+    \begin{tabular}{|c|c|c|}
         \hline
-        \textbf{Algorithm} & \textbf{Code} \\
+        \textbf{FairAlg} & \textbf{Minimum value} & \textbf{Maximum Value} \\
         \hline
-        DA & 1 \\
+        DA & 0.9975 & 0.9987 \\
         \hline
-        FTU & 2 \\
+        FtU & 0.9987 & 0.9987 \\
         \hline
-        EG & 3 \\
+        EG & 0.9944 & 0.9987 \\
         \hline
-        GS & 4 \\
+        GS & 0.5201 & 0.9987 \\
         \hline
     \end{tabular}
-    \caption{Algorithm encoding}
-\end{figure}
-
-\begin{figure}[H]
-    \centering
-    \begin{tikzpicture}
-        \begin{axis}[
-            x tick label style={
-                /pgf/number format/1000 sep=},
-            ylabel=Accuracy,
-            enlargelimits=0.00001,
-            legend style={at={(0.5,-0.1)},
-            anchor=north,legend columns=-1},
-            ybar interval=0.7,
-        ]
-        \addplot 
-            coordinates {(1, 0.9975) (2, 0.99871) (3, 0.9944) (4, 0.5201)};
-        \addplot 
-            coordinates {(1, 0.9987) (2, 0.99872) (3, 0.9987) (4, 0.9987)};
-        \legend{Min,Max}
-        \end{axis}
-        \end{tikzpicture}
     \caption{Min-Max accuracy for each fairness algorithm}
 \end{figure}
 
 There are some considerations that can be made about the accurencies presented:
-\begin{enumerate}
+\begin{itemize}
 
-    \item \emph{Maximum Variance with Grid Search:} The algorithm that demonstrates the maximum variance in accuracy results for both the XGB and RF models is Grid Search (GS). This indicates that GS is robust in yielding consistent accuracy outcomes, showcasing its stability in diverse scenarios.
+    \item The algorithm that demonstrates the maximum variance in accuracy results for both the XGB and RF models is Grid Search (GS). This indicates that GS is robust in yielding consistent accuracy outcomes, showcasing its stability in diverse scenarios.
 
-    \item \emph{Minimum Variance with Fairness through Unawareness:} In contrast, the Fairness through Unawareness (FtU) algorithm exhibits the minmum variance in accuracy values across different configurations. More specifically the accuracy is the same for both models. Furthermore this algorithm has the maximum accuracy, values that it shares with other 2 algorithms (DA and EG), but in contrast with them it has the maximum minimum value. This result suggests to choose FtU as fairness algorithm to achieve the maximum accuracy.
-\end{enumerate}
+    \item In contrast, the Fairness through Unawareness (FtU) algorithm exhibits the minmum variance in accuracy values across different configurations. More specifically the accuracy is the same for both models. Furthermore this algorithm has the maximum accuracy, values that it shares with other 2 algorithms (DA and EG), but in contrast with them it has the maximum minimum value. This result suggests to choose FtU as fairness algorithm to achieve the maximum accuracy.
+\end{itemize}
 
 Similarly, for each fairness algorithm, the minimum and maximum fairness values are presented. This evaluation allows for an understanding of the fairness outcomes associated with different algorithms, providing a comprehensive view of the trade-offs between accuracy and fairness.
 \newpage
 \textbf{Disparate Impact Sex}
 \begin{figure}[H]
     \centering
-    \begin{tikzpicture}
-        \begin{axis}[
-            x tick label style={
-                /pgf/number format/1000 sep=},
-            ylabel=Disparate Impact Sex,
-            enlargelimits=0.0001,
-            legend style={at={(0.5,-0.1)},
-            anchor=north,legend columns=-1},
-            ybar interval=0.7,
-        ]
-        \addplot 
-            coordinates {(1, 0.5409) (2, 0.3809) (3, 0.4103) (4, 0.5102) (5, 0.0000)};
-        \addplot 
-            coordinates {(1, 0.5950) (2, 0.4075) (3, 0.4325) (4, 0.6154) (5, 0.0000)};
-        \legend{Min,Max}
-        \end{axis}
-        \end{tikzpicture}
-    \caption{Min-Max Disparate Impact Metric for Sex protected attributes and for each fairness algorithm}
+    \begin{tabular}{|c|c|c|}
+        \hline
+        \textbf{FairAlg} & \textbf{Minimum value} & \textbf{Maximum Value} \\
+        \hline
+        DA & 0.9670 & 0.9670 \\
+        \hline
+        FtU & 0.9697 & 0.9750 \\
+        \hline
+        EG & 0.9697 & 0.9779 \\
+        \hline
+        GS & 0.0000 & 0.9697 \\
+        \hline
+    \end{tabular}
+    \caption{Min-Max Disparate Impact value for \emph{Sex} protected attribute}
 \end{figure}
 
+There are some considerations that can be made about the values presented above:
+
+\begin{itemize}
+
+    \item The huge variance for the Grid Search (GS) algorithm suggests that it's great sensitivity to the model used in the training step. Even if the models are similar. In this case XGB and RF have completely different behaviors.
+
+    \item The Exponentiated Gradient (EG) is the algorithm that performs better since it has the maximum minimum and maximum value.
+
+\end{itemize}
+
+According to the analysis of the results it's possible to conclude how if the goal is to achieve the Demographic Parity with a high accuracy for the protected attribute \emph{Sex} in this scenario the best choice would be the Exponentiated Gradient algorithm.
+
+% Keep going with capital island
